.version is prerequisite of AUTHORS
Following commit 2e0cfea (configure is now a prerequisite of .version), the
`.version' file is now a prerequisite of `AUTHORS' (`.version' is used by
the `genauthors' script to add the version number to `AUTHORS'). Since
`.version' also depends on `configure', so AUTHORS will now be generated
every time that Autoconf re-builds the `configure' script. During
development, updating the `configure' scripot is not too common, so this
won't slow down the process.

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,29 +23,22 @@
 
 
 
+
+
 ## Sources to be run before everything else
 ## ========================================
 ##
-## The .version file is created from the $(VERSION) variable which was
-## defined by the git-version-gen script at:
-##
-##    bootstrapped/build-aux/git-version-gen
-##
-## we want it to be created before anything else when running `make', `make
-## check', or `make install', see the "Built sources" section of the
-## AUTOMAKE manual and the git-version-gen script comments for more
-## information.
-##
-## Note that contrary to what is proposed by git-version-gen, here the
-## `.version' file's creation depends on the `configure' script, so anytime
-## a the VERSION variable is updated, `.version' is also updated. During
-## development of the main functionality of Gnuastro (utilities and
-## libraries), the `configure' script is rarely updated, so `.version' will
-## not be rebuilt and thus it won't harm the speed of testing.
-BUILT_SOURCES = $(top_srcdir)/.version
-$(top_srcdir)/.version: $(top_srcdir)/configure
-	echo $(VERSION) > $@-t && mv $@-t $@
-dist-hook:; echo $(VERSION) > $(distdir)/.tarball-version
+## These target(s) will be created before anything else when running
+## `make', `make check', or `make install', see the "Built sources" section
+## of the AUTOMAKE manual and the git-version-gen script comments for more
+## information. Note that AUTHORS depends on `$(top_srcdir)/.version', and
+## `$(top_srcdir)/.version' depends on $(top_srcdir)/configure'. So any
+## time the version is updated, both of these will be re-built. But during
+## usual utility and library development, `$(top_srcdir)/configure' is not
+## commonly updated, so this will not slow down the process.
+BUILT_SOURCES = $(top_srcdir)/AUTHORS
+
+
 
 
 
@@ -227,7 +220,7 @@ install-exec-local:
 	 echo;                                                                       \
 	 echo;                                                                       \
 	 echo "Environment variables to check: ";                                    \
-	 echo "  - '$(prefix)/bin' in PATH.";                                      \
+	 echo "  - '$(prefix)/bin' in PATH.";                                        \
 	 echo "(for an intro, run 'info gnuastro \"Installation directory\"')";      \
 	 echo;                                                                       \
 	 echo;                                                                       \
@@ -243,24 +236,62 @@ install-exec-local:
 
 
 
-## Generate AUTHORS for distributions
-## ==================================
+
+
+## $(top_srcdir)/.version
+## ======================
 ##
-## The AUTHORS file is generated automatically from the version
-## control history. Note the following two cases:
+## This file is created from the $(VERSION) variable which was defined by
+## the `git-version-gen' script (located at address below), which is run
+## when the `$(top_srcdir)/configure' script is being built by Autoconf.
 ##
-##   - The AUTHORS file is a prerequisite for the make dist* commands (all
-##     make targets including "dist") in the Makefile.in that Automake
-##     builds from this file. So it is not needed when we only run "make".
+##    $(top_srcdir)/bootstrapped/build-aux/git-version-gen
 ##
-##   - AUTHORS is defined as a double colon rule so that it is called every
-##     time any "make dist*" is called, even if AUTHORS already exists. It
-##     is possible for it to be called in a non version controlled source,
-##     in that case, it will not be updated (or created if it doesn't
-##     already exist, see `genauthors'). But generally, "make dist*" is not
-##     called too often and outside of version control.
+## Note that contrary to what is proposed by `git-version-gen', here the
+## creation of `$(top_srcdir)/.version' depends on the
+## `$(top_srcdir)/configure' script. Therefore, anytime a the VERSION
+## variable is updated there, `$(top_srcdir)/.version' is also
+## updated. During development, of the main functionality of Gnuastro
+## (utilities and libraries), the `$(top_srcdir/configure' script is rarely
+## updated, so `$(top_srcdir)/.version' will not be rebuilt and thus it
+## won't harm the speed of tests during development.
+$(top_srcdir)/.version: $(top_srcdir)/configure
+	echo $(VERSION) > $@-t && mv $@-t $@
+
+
+
+
+
+## $(top_srcdir)/AUTHORS
+## =====================
 ##
-##   - The genauthors script will not do anything (make/update the
-##     AUTHORS file) when there is no git repository.
-AUTHORS:: $(top_srcdir)/.version $(top_srcdir)/genauthors
-	$(top_srcdir)/genauthors $(top_srcdir)/.version
+## This file is generated automatically from the version controlled
+## history. Note the following:
+##
+##   - `$(top_srcdir)/AUTHORS' is defined as a BUILT_SOURCES variable, so
+##     it is the first thing that is built (even in multi-threaded runs).
+##
+##   - `$(top_srcdir)/AUTHORS' is updated only when
+##     `$(top_srcdir)/.version' is updated. `$(top_srcdir)/.version' its
+##     self is only updated when `$(top_srcdir)/configure' is updated. But
+##     generally, the `$(top_srcdir)/configure' script is not updated
+##     regularly during development and outside of version control.
+##
+##   - The `$(top_srcdir)/genauthors' script will not do anything
+##     (make/update the `$(top_srcdir)AUTHORS' file) when there is no git
+##     repository. `$(top_srcdir)/AUTHORS' is only necessary when building
+##     a tarball distribution.
+$(top_srcdir)/AUTHORS: $(top_srcdir)/.version
+	$(top_srcdir)/genauthors $(top_srcdir)
+
+
+
+
+
+## Run when building a distribution
+## ================================
+##
+## These targets will be created when building a (tarball)
+## distribution. Note that AUTHORS depends on `.version'.
+dist-hook: $(top_srcdir)/AUTHORS
+	echo $(VERSION) > $(distdir)/.tarball-version
