Man pages can be made in parallel
Until now, the man pages did not depend on the actual executable of each
utility. Therefore, when run in parallel, they would be build along side
the utility and all its sources, and therefore would fail (since `help2man'
needs the executable). With this commit, the executable is also a
dependency of the Man page, so there won't be any problem in parallel
builds.

`help2man' is run by calling the executable string along with the two
`--output' and `--source' options. Their order does not matter. So in this
update, they were ordered such that the `--source' option (which can be
long) is in a new line. This makes it much more likely for both lines to
fit nicely in an 80-character wide terminal emulator.

Since the man page is now dependent on the executable, it is also be built
in the build directory (when `help2man' is present), but it is not cleaned,
so it was also added to Automake's `CLEANFILE' variable (without this,
`make distcheck' would fail).

--- a/src/imgwarp/Makefile.am
+++ b/src/imgwarp/Makefile.am
@@ -34,7 +34,7 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
 
 
 
-## ImageCrop:
+## Utility and its sources
 bin_PROGRAMS = astimgwarp
 
 astimgwarp_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
@@ -58,5 +58,16 @@ dist_sysconf_DATA = astimgwarp.conf
 ## Generally for the man pages:
 dist_man_MANS = astimgwarp.1
 
-astimgwarp.1: args.h $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astimgwarp
+## Note that in parallel builds, we want to make sure that the man page is
+## only created once the executable is built, so the argument to
+## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
+## Makefile.in.
+astimgwarp.1: astimgwarp$(EXEEXT) args.h                              \
+              $(top_srcdir)/lib/gnuastro/commonargs.h
+	-$(HELP2MAN) --output=$@ ./astimgwarp$(EXEEXT)                \
+	             --source="$(PACKAGE_STRING)"
+
+# With the addition of the executable as a dependency for the man page, the
+# (possibly) produced man page will not be cleaned. So we have to ask for
+# its cleaning manually here.
+CLEANFILES = $(builddir)/astimgwarp.1
