--- a/src/arithmetic/Makefile.am
+++ b/src/arithmetic/Makefile.am
@@ -34,7 +34,7 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
 
 
 
-## ImageCrop:
+## Utility and its sources
 bin_PROGRAMS = astarithmetic
 
 astarithmetic_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
@@ -58,5 +58,16 @@ dist_sysconf_DATA = astarithmetic.conf
 ## Generally for the man pages:
 dist_man_MANS = astarithmetic.1
 
-astarithmetic.1: args.h $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astarithmetic
+## Note that in parallel builds, we want to make sure that the man page is
+## only created once the executable is built, so the argument to
+## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
+## Makefile.in.
+astarithmetic.1: astarithmetic$(EXEEXT) args.h                        \
+                 $(top_srcdir)/lib/gnuastro/commonargs.h
+	-$(HELP2MAN) --output=$@ ./astarithmetic$(EXEEXT)             \
+                     --source="$(PACKAGE_STRING)"
+
+# With the addition of the executable as a dependency for the man page, the
+# (possibly) produced man page will not be cleaned. So we have to ask for
+# its cleaning manually here.
+CLEANFILES = $(builddir)/astarithmetic.1
