--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -34,7 +34,7 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
 
 
 
-## ImageCrop:
+## Utility and its sources
 bin_PROGRAMS = astconvolve
 
 astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
@@ -57,5 +57,16 @@ dist_sysconf_DATA = astconvolve.conf
 ## Generally for the man pages:
 dist_man_MANS = astconvolve.1
 
-astconvolve.1: args.h $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astconvolve
+## Note that in parallel builds, we want to make sure that the man page is
+## only created once the executable is built, so the argument to
+## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
+## Makefile.in.
+astconvolve.1: astconvolve$(EXEEXT) args.h                             \
+               $(top_srcdir)/lib/gnuastro/commonargs.h
+	-$(HELP2MAN) --output=$@ ./astconvolve$(EXEEXT)                \
+	             --source="$(PACKAGE_STRING)"
+
+# With the addition of the executable as a dependency for the man page, the
+# (possibly) produced man page will not be cleaned. So we have to ask for
+# its cleaning manually here.
+CLEANFILES = $(builddir)/astconvolve.1
