--- a/src/mknoise/Makefile.am
+++ b/src/mknoise/Makefile.am
@@ -34,7 +34,7 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
 
 
 
-## ImageCrop:
+## Utility and its sources
 bin_PROGRAMS = astmknoise
 
 astmknoise_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
@@ -57,5 +57,16 @@ dist_sysconf_DATA = astmknoise.conf
 ## Generally for the man pages:
 dist_man_MANS = astmknoise.1
 
-astmknoise.1: args.h $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astmknoise
+## Note that in parallel builds, we want to make sure that the man page is
+## only created once the executable is built, so the argument to
+## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
+## Makefile.in.
+astmknoise.1: astmknoise$(EXEEXT) args.h                            \
+              $(top_srcdir)/lib/gnuastro/commonargs.h
+	-$(HELP2MAN) --output=$@ ./astmknoise$(EXEEXT)              \
+	             --source="$(PACKAGE_STRING)"
+
+# With the addition of the executable as a dependency for the man page, the
+# (possibly) produced man page will not be cleaned. So we have to ask for
+# its cleaning manually here.
+CLEANFILES = $(builddir)/astmknoise.1
