--- a/src/mkprof/Makefile.am
+++ b/src/mkprof/Makefile.am
@@ -33,6 +33,8 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
 
 
 
+
+# Utility and its sources
 bin_PROGRAMS = astmkprof
 
 astmkprof_SOURCES = main.c main.h ui.c ui.h mkprof.c mkprof.h args.h	\
@@ -55,5 +57,16 @@ dist_sysconf_DATA = astmkprof.conf
 ## Generally for the man pages:
 dist_man_MANS = astmkprof.1
 
-astmkprof.1: args.h $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astmkprof
+## Note that in parallel builds, we want to make sure that the man page is
+## only created once the executable is built, so the argument to
+## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
+## Makefile.in.
+astmkprof.1: astmkprof$(EXEEXT) args.h                                \
+             $(top_srcdir)/lib/gnuastro/commonargs.h
+	-$(HELP2MAN) --output=$@ ./astmkprof$(EXEEXT)                 \
+	             --source="$(PACKAGE_STRING)"
+
+# With the addition of the executable as a dependency for the man page, the
+# (possibly) produced man page will not be cleaned. So we have to ask for
+# its cleaning manually here.
+CLEANFILES = $(builddir)/astmkprof.1
