--- a/src/noisechisel/Makefile.am
+++ b/src/noisechisel/Makefile.am
@@ -34,7 +34,7 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
 
 
 
-## ImageCrop:
+## Utility and its sources
 bin_PROGRAMS = astnoisechisel
 
 astnoisechisel_SOURCES = main.c main.h cite.h ui.c ui.h args.h		\
@@ -61,5 +61,16 @@ dist_sysconf_DATA = astnoisechisel.conf
 ## Generally for the man pages:
 dist_man_MANS = astnoisechisel.1
 
-astnoisechisel.1: args.h $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astnoisechisel
+## Note that in parallel builds, we want to make sure that the man page is
+## only created once the executable is built, so the argument to
+## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
+## Makefile.in.
+astnoisechisel.1: astnoisechisel$(EXEEXT) args.h                        \
+                  $(top_srcdir)/lib/gnuastro/commonargs.h
+	-$(HELP2MAN) --output=$@ ./astnoisechisel$(EXEEXT)              \
+	             --source="$(PACKAGE_STRING)"
+
+# With the addition of the executable as a dependency for the man page, the
+# (possibly) produced man page will not be cleaned. So we have to ask for
+# its cleaning manually here.
+CLEANFILES = $(builddir)/astnoisechisel.1
