tests/.gnuastro directory is now cleaned
The `tests/.gnuastro' directory is built by the `tests/prepconf.sh' script
to keep all the configuration files for testsing. However, to clean it, we
had relied on Automake's `CLEANFILES' variable. As the name suggests, this
variable is only built for files, not directories. So the build directory
would not get cleaned. Spotting this problem was hard because Automake
doesn't abort in such cases and the notice was too deeply buried in the
other outputs.

This problem was fixed using Automake's `clean-local' rule.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -49,8 +49,13 @@ EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt			\
 mkprof/mkprofcat1_mask.txt mkprof/mkprofcat2.txt		\
 mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt imgcrop/cat.txt
 
-CLEANFILES = *.log *.txt *.jpg *.fits *.pdf *.eps .gnuastro/*.conf	\
-.gnuastro
+CLEANFILES = *.log *.txt *.jpg *.fits *.pdf *.eps
+
+# CLEANFILES is only for files, not directories. Therefore we are using
+# Automake's extending rules to clean the temporary `.gnuastro' directory
+# that was built by the `prepconf.sh' scripot. See "Extending Automake
+# rules", and the "What Gets Cleaned" sections of the Automake manual.
+clean-local:; rm -rf .gnuastro
 
 
 
