--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -58,7 +58,7 @@
 # necessary in autoreconf. Recall that we have to satisfy the GNU
 # Coding Standards which require this file's existence and autoreconf
 # will complain if its not here.
-./genauthors
+./genauthors ./
 
 
 
