--- a/src/header/Makefile.am
+++ b/src/header/Makefile.am
@@ -28,9 +28,8 @@ bin_PROGRAMS = astheader
 astheader_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 header.c header.h
 
-astheader_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
--lgalconfigfiles -lgalfitsarrayvv -lgalcheckset -lgaltiming	\
--lgallinkedlist
+astheader_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
+-lgalconfigfiles -lgalfits -lgalcheckset -lgaltiming -lgallinkedlist
 
 
 
