--- a/src/mkcatalog/Makefile.am
+++ b/src/mkcatalog/Makefile.am
@@ -29,7 +29,7 @@ astmkcatalog_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 mkcatalog.c mkcatalog.h columns.c columns.h
 
 astmkcatalog_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
--lgalconfigfiles -lgalfitsarrayvv -lgalcheckset -lgaltiming	\
+-lgalconfigfiles -lgalfits -lgalwcs -lgalcheckset -lgaltiming	\
 -lgallinkedlist -lgaltxtarrayvv
 
 
