The txtarrayvv library renamed to txtarray
Following commit f7f8d0c (Rename exported functions according to new naming
conventions) The `vv' in `txtarrayvv' and `fitsarrayvv' libraries were
dropped (correctly). However, the `vv's still remained in the library file
names. This could cause confusion so with this commit we have remove the
`vv's from the latter. The issue with `fitsarrayvv' was addressed in the
previous commit (f89bfd8: Renamed fitsarrayvv library to fits).

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -25,9 +25,9 @@
 ## Make libraries of the files that are shared between all the
 ## programs:
 headersdir=$(top_srcdir)/lib/gnuastro
-noinst_LTLIBRARIES = libgalconfigfiles.la libgalfits.la			  \
-libgaltxtarrayvv.la libgalcheckset.la libgallinkedlist.la libgaltiming.la \
-libgalthreads.la libgalbox.la libgalarraymanip.la libgalstatistics.la	  \
+noinst_LTLIBRARIES = libgalconfigfiles.la libgalfits.la libgaltxtarray.la \
+libgalcheckset.la libgallinkedlist.la libgaltiming.la libgalthreads.la	  \
+libgalbox.la libgalarraymanip.la libgalstatistics.la			  \
 libgalspatialconvolve.la libgalmesh.la libgalmode.la libgalqsort.la	  \
 libgalpolygon.la libgalwcs.la
 
@@ -51,13 +51,13 @@ libgalthreads_la_SOURCES = threads.c $(headersdir)/threads.h
 
 libgalcheckset_la_SOURCES = checkset.c $(headersdir)/checkset.h
 
+libgaltxtarray_la_SOURCES = txtarray.c $(headersdir)/txtarray.h
+
 libgallinkedlist_la_SOURCES = linkedlist.c $(headersdir)/linkedlist.h
 
 libgalstatistics_la_SOURCES = statistics.c $(headersdir)/statistics.h
 
 libgalarraymanip_la_SOURCES = arraymanip.c $(headersdir)/arraymanip.h
-
-libgaltxtarrayvv_la_SOURCES = txtarrayvv.c $(headersdir)/txtarrayvv.h
 
 libgalconfigfiles_la_SOURCES = configfiles.c $(headersdir)/configfiles.h
 
