--- a/src/mkcatalog/Makefile.am
+++ b/src/mkcatalog/Makefile.am
@@ -37,25 +37,5 @@ astmkcatalog_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
 
 
 # To destribute the defaults file.
+# NOTE: the man page is created in doc/Makefile.am
 dist_sysconf_DATA = astmkcatalog.conf
-
-
-
-
-
-## Generally for the man pages:
-dist_man_MANS = astmkcatalog.1
-
-## Note that in parallel builds, we want to make sure that the man page is
-## only created once the executable is built, so the argument to
-## bin_PROGRAMS is a prerequisite here, the $(EXEEXT) is used in
-## Makefile.in.
-astmkcatalog.1: astmkcatalog$(EXEEXT) args.h                        \
-                $(top_srcdir)/lib/gnuastro/commonargs.h
-	-$(HELP2MAN) --output=$@ ./astmkcatalog$(EXEEXT)            \
-	             --source="$(PACKAGE_STRING)"
-
-# With the addition of the executable as a dependency for the man page, the
-# (possibly) produced man page will not be cleaned. So we have to ask for
-# its cleaning manually here.
-CLEANFILES = $(builddir)/astmkcatalog.1
