--- a/Makefile.am
+++ b/Makefile.am
@@ -113,10 +113,10 @@ dist_doc_DATA = README
 
 ## Files that are only distributed
 ## ===============================
-EXTRA_DIST = bootstrap bootstrap.conf genauthors .dir-locals.el .version  \
-             bootstrapped/m4/gnulib-cache.m4 bootstrapped/README	  \
-             .autom4te.cfg lib/gnuastro/commonargs.h			  \
-             lib/gnuastro/commonparams.h lib/gnuastro/fixedstringmacros.h \
+EXTRA_DIST = bootstrap bootstrap.conf genauthors .dir-locals.el .version   \
+             tmpfs-config-make bootstrapped/m4/gnulib-cache.m4             \
+             bootstrapped/README .autom4te.cfg lib/gnuastro/commonargs.h   \
+             lib/gnuastro/commonparams.h lib/gnuastro/fixedstringmacros.h  \
              lib/gnuastro/neighbors.h lib/gnuastro/README
 
 
