MakeProfiles also accepts WCS positions
Until now the profile centers in MakeProfiles could only be specified by
image coordinates (X and Y). However, for most practical purposes, the
World Coordinate System (WCS, using right ascension and declination) is
needed. So MakeProfiles was modified to also be able to read WCS positions
in the input catalog when the user asks so. To do this, two options were
added for the user to specify the RA and Dec columns. When these columns
are given, the X and Y coordinates are no longer used.

This process mainly involved the starting of MakeProfiles (mostly in
`ui.c'). The construction of the WCS structure (when a background image is
not provided) was moved to `ui.c' (from `mkprof.c'). Having the WCS
structure, the given RA and Decs are converted to X and Y, replaced with
the RA and Dec and the `xcol' and `ycol' values set to the old RA and Dec
columns. Reading the WCS structure in `ui.c' also simplified the output
writing parts of `mkprof.c'.

While doing this I noticed that if the given oversampling factor is not
odd, then it is incremented to become odd! This is very bad behavior (I
honestly don't know what I was thinking when I put this line!). If the user
is expecting to oversample by 2, we can't secretly oversample by 3 for
example, we will just greatly confuse the user! Instead, now an error
message is printed which explains that oversampling must be an odd number.

While doing the work, in some places, the indentation were also corrected
(mainly following the refactoring of function names in commit c63305c).

A simple test was also written to build profiles based on their input WCS
coordinates.

This finishes task #13566.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -30,20 +30,18 @@ export topsrc=$(top_srcdir);                        \
 export haslibjpeg=$(MAYBE_HASLIBJPEG);              \
 export hasghostscript=$(MAYBE_HASGHOSTSCRIPT);
 
-TESTS = prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh			\
-mkprof/mosaic3.sh mkprof/mosaic4.sh imgcrop/imgcat.sh			\
-imgcrop/wcscat.sh imgcrop/xcyc.sh imgcrop/xcycnoblank.sh		\
-imgcrop/section.sh imgcrop/radec.sh imgcrop/imgpolygon.sh		\
-imgcrop/imgoutpolygon.sh imgcrop/wcspolygon.sh convertt/fitstotxt.sh	\
-convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh	\
-convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh			\
-convertt/fitstopdf.sh convolve/spatial.sh convolve/frequency.sh		\
-imgwarp/imgwarp_scale.sh imgwarp/homographic.sh mknoise/addnoise.sh	\
-mkprof/ellipticalmasks.sh header/write.sh header/print.sh		\
-header/update.sh header/delete.sh imgstat/basicstats.sh			\
-subtractsky/subtractsky.sh noisechisel/noisechisel.sh			\
-mkcatalog/simple.sh arithmetic/snimage.sh arithmetic/onlynumbers.sh	\
-cosmiccal/simpletest.sh
+TESTS = prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh mkprof/mosaic3.sh   \
+mkprof/mosaic4.sh mkprof/radeccat.sh imgcrop/imgcat.sh imgcrop/wcscat.sh    \
+imgcrop/xcyc.sh imgcrop/xcycnoblank.sh imgcrop/section.sh imgcrop/radec.sh  \
+imgcrop/imgpolygon.sh imgcrop/imgoutpolygon.sh imgcrop/wcspolygon.sh        \
+convertt/fitstotxt.sh convertt/fitstojpeg.sh convertt/blankch.sh            \
+convertt/jpegtotxt.sh convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh     \
+convertt/fitstopdf.sh convolve/spatial.sh convolve/frequency.sh	            \
+imgwarp/imgwarp_scale.sh imgwarp/homographic.sh mknoise/addnoise.sh         \
+mkprof/ellipticalmasks.sh header/write.sh header/print.sh header/update.sh  \
+header/delete.sh imgstat/basicstats.sh subtractsky/subtractsky.sh           \
+noisechisel/noisechisel.sh mkcatalog/simple.sh arithmetic/snimage.sh        \
+arithmetic/onlynumbers.sh cosmiccal/simpletest.sh
 
 EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt			\
 mkprof/mkprofcat1_mask.txt mkprof/mkprofcat2.txt		\
@@ -77,6 +75,7 @@ mkprof/mosaic1.sh: prepconf.sh.log
 mkprof/mosaic2.sh: prepconf.sh.log
 mkprof/mosaic3.sh: prepconf.sh.log
 mkprof/mosaic4.sh: prepconf.sh.log
+mkprof/radeccat.sh: prepconf.sh.log
 imgcrop/imgcat.sh: mkprof/mosaic1.sh.log
 imgcrop/wcscat.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log     \
                    mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
